// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Node Item Size slot should print GiB size when size between 1GiB and 1023GiB 1`] = `
<pre
  className="sc-bdVaJa eztgmS"
>
    5.0G
</pre>
`;

exports[`Project Node Item Size slot should print MiB size when size between 1MiB and 1023MiB 1`] = `
<pre
  className="sc-bdVaJa eztgmS"
>
    3.0M
</pre>
`;

exports[`Project Node Item Size slot should print TiB size when size between 1TiB and 1023TiB 1`] = `
<pre
  className="sc-bdVaJa eztgmS"
>
    5.0T
</pre>
`;

exports[`Project Node Item Size slot should print byte size when size less than 1024 1`] = `
<pre
  className="sc-bdVaJa eztgmS"
>
  1023.0B
</pre>
`;

exports[`Project Node Item Size slot should print hyphen only when unit can not calculate 1`] = `
<pre
  className="sc-bdVaJa eztgmS"
>
    1.0-
</pre>
`;

exports[`Project Node Item Size slot should print kibibyte size when size between 1KiB and 1023KiB 1`] = `
<pre
  className="sc-bdVaJa eztgmS"
>
    2.0K
</pre>
`;

exports[`Project Node Item Size slot should print zero size 1`] = `
<pre
  className="sc-bdVaJa eztgmS"
>
    0.0B
</pre>
`;
